--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.12.0",
     "@yelo/rollup-node-external": "1.0.1",
+    "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-prettier": "8.10.0",
     "eslint-import-resolver-typescript": "3.6.1",
